[package]
name = "rust_toonify"
version = "0.1.0"
edition = "2021"
description = "High-performance TOON format encoder/decoder in Rust"
license = "MIT"
repository = "https://github.com/ScrapeGraphAI/toonify_rs"

[lib]
name = "toonify_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module", "abi3-py37"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
regex = { version = "1.10", default-features = false, features = ["std", "perf"] }

[build-dependencies]
pyo3-build-config = "0.20.0"

[profile.release]
lto = true
codegen-units = 1
